Bug 163812 - sw sidebar: background fill not updated (immediately) in page sidebar when page-style is changed
Summary: sw sidebar: background fill not updated (immediately) in page sidebar when pa...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: low trivial
Assignee: Justin L
URL:
Whiteboard: target:25.2.0
Keywords: implementationError
Depends on:
Blocks: Area-Fill-Tab 125969
  Show dependency treegraph
 
Reported: 2024-11-08 00:24 UTC by Justin L
Modified: 2025-06-24 14:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2024-11-08 00:24:45 UTC
In Draw, the sidebar is immediately updated if Format - Page style changes the background. But in Writer, some external trigger (like print preview) is needed to cause that information to refresh.
-changing the paper size forces a full refresh, but changing "Right and Left" to "Mirrored" doesn't.

Steps to reproduce:
1.) start a new writer document and open the sidebar - look at page properties and see that background is set to none
2.) Format - Page Style and change the Area from None to a Color.

Expected: the sidebar should be signalled when the background fill is changed.
Actual: background still reported as NONE

The "page" sidebar was developed during LO 5.3 as an experimental feature, and acted this way right from the beginning. But this looks like it is a missing invalidation issue in cui/source/tabpages/tpbitmap.cxx, not a sidebar issue.
Comment 1 Justin L 2024-11-08 21:41:58 UTC
The sidebar feature was added with
commit d02f75a8c36705924ddd6a5921fe3012fafce812
Author: Oliver-Rainer Wittmann on Wed Apr 10 08:20:16 2013 +0000
Resolves: #i121420# merge sidebar feature

where sw/source/core/doc/docdesc.cxx set out its current invalidations. Since background was added to the sidebar after that, I expect it just needs an extra invalidation when the page style is changed.
Comment 2 Justin L 2024-11-09 12:50:15 UTC
Fixed in master with https://gerrit.libreoffice.org/c/core/+/176300.

This bug was fixed for the benefit of bug 125969.